# homo-politicus

./: .gitignore  CMakeLists.txt  HomoPoliticus  Makefile  README.md  inicial_prompt.md  iniciat_prompt.md
docs/: ARQUITECTURA_Y_CONCEPTOS.md  GAME_MATH.md  STEAM_INTEGRATION.md
include/: AchievementTracker.hpp  Advisor.hpp  Country.hpp  DecisionSystem.hpp  EndCondition.hpp  EventLoader.hpp  EventManager.hpp  ExpressionEvaluator.hpp  FeedbackBuilder.hpp  Game.hpp  GameMode.hpp  GameOverChecker.hpp  IronManMode.hpp  LeaderLoader.hpp  Localization.hpp  MiniYaml.hpp  ModLoader.hpp  PerfTracker.hpp  Persistence.hpp  ScenarioLoader.hpp  SuccessorMode.hpp  Telemetry.hpp  TelemetryConsent.hpp  TestFramework.hpp  Tutorial.hpp
src/: AchievementTracker.cpp  Advisor.cpp  Country.cpp  DecisionSystem.cpp  EventLoader.cpp  EventManager.cpp  ExpressionEvaluator.cpp  FeedbackBuilder.cpp  Game.cpp  GameMode.cpp  GameOverChecker.cpp  IronManMode.cpp  LeaderLoader.cpp  Localization.cpp  MiniYaml.cpp  ModLoader.cpp  PerfTracker.cpp  Persistence.cpp  ScenarioLoader.cpp  SuccessorMode.cpp  Telemetry.cpp  TelemetryConsent.cpp  Tutorial.cpp  main.cpp
tests/: test_accessibility.cpp  test_achievements.cpp  test_achievements_v2.cpp  test_achievements_view.cpp  test_actionpanel.cpp  test_advisor.cpp  test_audio_system.cpp  test_dashboard.cpp  test_decision_modal.cpp  test_decisions.cpp  test_event_loader.cpp  test_event_loader_file.cpp  test_expression.cpp  test_feedback.cpp  test_game_mode.cpp  test_gameover.cpp  test_gameover_screen.cpp  test_hotkey_manager.cpp  test_integration_full_game.cpp  (+26 more)
(+64 files in other folders)
